<resources>
    <string name="app_name">posto tancredo</string>
    <string name="agendado">Agendado</string>
    <string name="home">Home</string>
    <string name="hist_rico">Histórico</string>
    <string name="perfil">Perfil</string>
    <string name="harry_maguira">Harry maguira</string>
    <string name="meus_dados">Meus dados</string>
    <string name="configura_es">Configurações</string>
    <string name="d_vidas">Dúvidas</string>
    <string name="sobre">Sobre</string>
    <string name="prefeitura_de_presidente_tancrede_neves">Prefeitura de Presidente Tancrede Neves</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agendar">Agendar</string>
    <string name="seu_hist_rico_est_vazio">Seu histórico está vazio.</string>
    <string name="digite_seu_email">Digite seu email.</string>
    <string name="fa_a_login_com_sua_conta">Faça login com sua conta</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="login">login</string>
    <string name="prefitura_de_presidente_tancredo_neves">Prefitura de Presidente Tancredo Neves</string>
    <string name="digite_o_numero_do_seu_cpf">Digite o numero do seu CPF</string>
    <string name="digite_o_numero_do_cart_o_do_sus">Digite o numero do cartão do SUS</string>
    <string name="registrar">Registrar</string>
    <string name="digite_susa_senha_novamente">Digite susa senha novamente.</string>
    <string name="digite_seu_nome_completo">Digite seu nome completo</string>
    <string name="digite_sua_senha_novamente">Digite sua senha novamente.</string>
    <string name="sair">Sair</string>
    <string name="observa_es">Observações:</string>
    <string name="saiba_mais">Saiba Mais</string>
    <string name="data_do_atendimento">Data do atendimento:</string>
    <string name="nenhuma_observa_o">Nenhuma observação</string>
    <string name="hor_rio_do_atendimento">Horário do atendimento:</string>
    <string name="unidade_de_sa_de">Unidade de saúde</string>
</resources>