<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/dirtyWhite"
    tools:context=".view.MainActivity">


    <LinearLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


    </LinearLayout>

    <FrameLayout
        android:id="@+id/side_sheet"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@drawable/blue_gradiente"
        app:layout_behavior="com.google.android.material.sidesheet.SideSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/blue_gradiente"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="50dp">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/unnamed" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="Raul Carlos"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meus_dados"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:textColor="#D8D3D3"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configura_es"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:textColor="#D8D3D3"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_vidas"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:textColor="#D8D3D3"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sobre"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:textColor="#D8D3D3"
                android:textSize="17sp"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:src="@drawable/logo_ptn"/>


            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:text="@string/sair"
                android:textColor="#D8D3D3"
                android:textSize="17sp"/>
        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/top_border_radios"
        app:itemHorizontalTranslationEnabled="false"
        app:layout_anchor="@+id/side_sheet"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>